--- a/app.json
+++ b/app.json
@@ -9,16 +9,16 @@
     "forward",
     "bot"
   ],
-  "success_url": "https://t.me/DForDarkAngel",
-  "website": "https://github.com/Jijinr/Frwdit",
-  "repository": "https://github.com/Jijinr/Frwdit",
+  "success_url": "https://t.me/punisherofc",
+  "website": "https://github.com/AutoFilterV4/Frwdit",
+  "repository": "https://github.com/AutoFilterV4/Frwdit",
   "env": {
     "API_ID": {
       "description": "Get this value from https://my.telegram.org or @UseTGXBot",
       "value": ""
     },
     "API_HASH": {
-      "description": "Get this value from https://my.telegram.org or @UseTGXBot",
+      "description": "Get this value from https://my.telegram.org ",
       "value": ""
     },
     "BOT_TOKEN": {
